[tool.poetry]
name = "sova"
version = "0.0.0"
description = "SLAM on Voxel Alignment"
authors = [
  "Pavel Mokeev <pav3l.mokeev@gmail.com>"
]
license = "APACHE"
readme = "README.md"
homepage = "https://github.com/prime-slam/"
repository = "https://github.com/prime-slam/voxel-slam"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = "3.10.*"
mrob = "^0.0.12"
numpy = "^1.26.0"
open3d = "^0.17.0"
octreelib = "^0.0.6"
scikit-learn = "^1.3.1"
PyYAML = "~6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"